--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,14 @@
-# This is Clement's awesome website
+---
+title: "Home"
+output: html_document
+---
+
+# Hi, I’m Clement 👋
+
+I’m a Biostatistics MS student at Columbia. This site hosts my projects, resume, and contact info.
+
+- 👉 See my [resume](resume.html)
+- 📬 Email me at [maximumride112@gmail.com](mailto:maximumride112@gmail.com)
+- 🐙 Visit my [GitHub](https://github.com/clementiaboo)
 
 ![](https://shortpixel.com/blog/wp-content/uploads/2023/12/nyan-cat.gif)
-
-
