--- a/resume.Rmd
+++ b/resume.Rmd
@@ -6,7 +6,6 @@ output:
     toc_depth: 2
     toc_float: true
 ---
-
 ## Summary
 Hi there! I am a MS Biostatistics Student at Columbia University.
 
@@ -31,4 +30,4 @@ Hi there! I am a MS Biostatistics Student at Columbia University.
 
 ## Links
 - [Download PDF resume](Resume_Clement_Li_2025.pdf)
-- [GitHub](https://github.com/clementiaboo) · [LinkedIn](https://www.linkedin.com/in/https://www.linkedin.com/in/clement-li-881696a4/)
+- [GitHub](https://github.com/clementiaboo) · [LinkedIn](https://www.linkedin.com/in/clement-li-881696a4/)
