final nav bar fix

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "Home"
-output: html_document
+site: .
+output:
+  html_document:
+    theme: cerulean
 ---
-
 # Hi, I’m Clement 👋
 
 I’m a Biostatistics MS student at Columbia. This site hosts my projects, resume, and contact info.
