--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,9 +1,11 @@
 ---
 title: "Resume"
-site: .
 output:
   html_document:
     theme: cerulean
+    toc: true
+    toc_depth: 2
+    toc_float: true
 ---
 
 ## Education
